fix the layout problem

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -24,9 +24,9 @@ section {
 
 footer {
 	text-align: center;
-	position: absolute;
+	/*position: absolute;
     bottom: 5%;
-    width: 100%;
+    width: 100%;*/
 }
 
 .word {
